<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:background="@drawable/backgound1"
        android:layout_height="wrap_content"></LinearLayout>
    <RelativeLayout
        android:id="@+id/loginset"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

    </RelativeLayout>

    <TableLayout
        android:id="@+id/loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow android:layout_width="wrap_content">
            <TextView
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="right"
                android:padding="5dip"
                />
            <EditText
                android:id="@+id/username"
                android:scrollHorizontally="true"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="right"
                android:padding="5dip"/>
            <EditText
                android:id="@+id/password"
                android:password="true"
                android:scrollHorizontally="true"/>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/loginSet"
        android:layout_width="match_parent"
        android:layout_marginTop="3dip"
        android:layout_height="110dp"
        android:layout_weight="0.51">

        <Button
            android:id="@+id/register_bt"
            android:text="@string/register"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/login_bt"
            android:text="@string/login"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:paddingLeft="80dip"
            android:paddingRight="80dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/register_bt"
            android:layout_toEndOf="@+id/register_bt" />

        <CheckBox
            android:id="@+id/startVibrate"
            android:layout_width="wrap_content"
            android:text="@string/viberateOpen"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
        android:id="@+id/silenceLogin"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:text="@string/quietLogin"
        android:layout_height="wrap_content"
        android:checked="true"
            android:layout_gravity="right"
            android:layout_alignBaseline="@+id/startVibrate"
            android:layout_alignBottom="@+id/startVibrate"
            android:layout_alignLeft="@+id/rememberPassword"
            android:layout_alignStart="@+id/rememberPassword" />

        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberPwd"
            android:textColor="#000000"
            android:checked="false"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/login_bt"
            android:layout_alignEnd="@+id/login_bt" />

        <CheckBox
            android:id="@+id/autoLogin"
            android:layout_width="wrap_content"
            android:text="@string/autoLogin"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>