<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fastScrollEnabled="true"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/upload_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue" >

        <ImageView
            android:id="@+id/upload_title_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/collectRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/queryRoute"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/city_textview"
        android:textSize="30dp"
        android:id="@+id/textView_city"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_city"
        android:layout_alignTop="@+id/textView_city"
        android:layout_alignParentRight="true"
       />

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/start_textview"
        android:textSize="30dp"
        android:id="@+id/textView_start"
        android:layout_below="@+id/textView_city"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/edit_start"
        android:layout_alignTop="@+id/textView_start"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/end_textview"
        android:textSize="30dp"
        android:id="@+id/textView_end"
        android:layout_below="@+id/textView_start"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/edit_end"
        android:layout_alignTop="@+id/textView_end"
        android:layout_alignParentRight="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:text="@string/search_button"
        android:id="@+id/button_search"
        android:layout_above="@+id/button_clear"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:text="@string/clean_button"
        android:id="@+id/button_clear"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_search"
        android:layout_alignStart="@+id/button_search" />
    </RelativeLayout>
</LinearLayout>
