<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fastScrollEnabled="true"
    android:orientation="vertical"
    android:scrollbars="vertical" >

   	<RelativeLayout
	    android:id="@+id/homepage_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/blue">
	    
    	<TextView
	    	android:id="@+id/homepage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    	
    	<ImageView
		    android:id="@+id/homepage_logout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_marginLeft="40dp"
		    android:layout_toRightOf="@+id/homepage_name"
		    android:paddingTop="12dp"
		    android:src="@drawable/homepage_logout" />
  	
	</RelativeLayout>
	
   	<RelativeLayout
   	    android:id="@+id/homepage_body"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/grey">
    		  
        	<ImageView
        		android:id="@+id/bmapsView"
        		android:layout_width="300dp"
        		android:layout_height="300dp"
        		android:layout_centerInParent="true"
        		android:clickable="true" 
        		android:src="@drawable/baidu"/>
		    
		    <Button 
        	    android:id="@+id/button_myCollections"
        	    android:layout_width="90dp"
        		android:layout_height="50dp"
        		android:layout_below="@+id/bmapsView"
        		android:layout_marginTop="50dp"
        		android:layout_marginLeft="7dp"
        		android:textSize="15sp"
        		android:text="@string/string_button_myCollections"/>
		    
		    <Button 
		        android:id="@+id/button_search"
		        android:layout_width="90dp"
        		android:layout_height="50dp"
        		android:layout_toRightOf="@+id/button_myCollections"
        		android:layout_alignTop="@+id/button_myCollections"
        		android:layout_marginLeft="17dp"
        		android:textSize="15sp"
        		android:text="@string/string_search"
		        />
		    <Button 
        	    android:id="@+id/button_upload"
        	    android:layout_width="90dp"
        		android:layout_height="50dp"
        		android:layout_toRightOf="@+id/button_search"
        		android:layout_alignTop="@+id/button_search"
        		android:layout_marginLeft="17dp"
        		android:textSize="15sp"
        		android:text="@string/string_upload"/>
        	
    </RelativeLayout>
</LinearLayout>
